--- a/Assignment_1_besvarelse.html
+++ b/Assignment_1_besvarelse.html
@@ -59,6 +59,28 @@ if (window.hljs) {
 
 
 
+<style type="text/css">
+/* for pandoc --citeproc since 2.11 */
+div.csl-bib-body { }
+div.csl-entry {
+  clear: both;
+}
+.hanging div.csl-entry {
+  margin-left:2em;
+  text-indent:-2em;
+}
+div.csl-left-margin {
+  min-width:2em;
+  float:left;
+}
+div.csl-right-inline {
+  margin-left:2em;
+  padding-left:1em;
+}
+div.csl-indent {
+  margin-left: 2em;
+}
+</style>
 
 
 
@@ -203,9 +225,15 @@ pre code {
 <p>* Kan reproduserbarhet ha relevans i sektorer utenfor akademia?</p>
 <p>- Konklusjon</p>
 <p>- Litteraturliste</p>
+<p>Funker dett, <span class="citation"><a href="#ref-schwab1995" role="doc-biblioref">Schwab et al.</a> (<a href="#ref-schwab1995" role="doc-biblioref">1995</a>)</span>.</p>
 </div>
-<div id="litteratur" class="section level2">
-<h2>litteratur</h2>
+<div id="litteratur" class="section level2 unnumbered">
+<h2 class="unnumbered">litteratur</h2>
+<div id="refs" class="references csl-bib-body hanging-indent" line-spacing="2">
+<div id="ref-schwab1995" class="csl-entry">
+Schwab, M., Karrenbach, M., og Claerbout, J. (1995). <em>Reproducible Electronic Documents</em>. 14.
+</div>
+</div>
 </div>
 
 
