--- a/ass1-writing-R-Notebook.html
+++ b/ass1-writing-R-Notebook.html
@@ -305,6 +305,7 @@ pre code {
 <li>Litteraturliste</li>
 </ul>
 <p>R Notebook-en må kunne transformeres til .nb.html, .pdf fil. og MS Word format.</p>
+<p>Hva skjer?, <span class="citation">@knut</span></p>
 </div>
 <div id="litteraturliste" class="section level2">
 <h2>Litteraturliste</h2>
