--- a/Assignment_1_besvarelse.html
+++ b/Assignment_1_besvarelse.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 
-<<<<<<< HEAD
-<html>
-=======
 <html lang="nb-NO" xml:lang="nb-NO">
->>>>>>> First_branch
 
 <head>
 
@@ -63,8 +59,6 @@ if (window.hljs) {
 
 
 
-<<<<<<< HEAD
-=======
 <style type="text/css">
 /* for pandoc --citeproc since 2.11 */
 div.csl-bib-body { }
@@ -87,7 +81,6 @@ div.csl-indent {
   margin-left: 2em;
 }
 </style>
->>>>>>> First_branch
 
 
 
@@ -201,20 +194,28 @@ pre code {
 </div>
 
 
-<<<<<<< HEAD
-
-=======
 <div id="disposisjon-dere-trenger-ikke-dekke-alt-listet-her" class="section level2">
 <h2>disposisjon (dere trenger ikke dekke alt listet her)</h2>
-<p>- Innleding</p>
-<p>* Reproduserbarhet, R notebooks</p>
-<p>- Litteraturgjennomgang</p>
-<p>* Replikerbarhet/reproduserbarhet</p>
-<p>* Problemets omfang</p>
+<p><strong>- Innleding</strong></p>
+<p><strong>* Reproduserbarhet, R notebooks</strong></p>
+<p><strong>- Litteraturgjennomgang</strong></p>
+<p><strong>* Replikerbarhet/reproduserbarhet</strong></p>
+<p><strong>* Problemets omfang</strong></p>
 <ul>
-<li>Vil dagens løsning med arkiv av data og event. programkode hos</li>
+<li><strong>Vil dagens løsning med arkiv av data og event. programkode hos</strong></li>
 </ul>
-<p>tidsskriftene kunne løse problemet?</p>
+</div>
+<div id="tidsskriftene-kunne-løse-problemet" class="section level1">
+<h1><strong>tidsskriftene kunne løse problemet?</strong></h1>
+<p><u>- Innleding</u></p>
+<p><u>* Reproduserbarhet, R notebooks</u></p>
+<p><u>- Litteraturgjennomgang</u></p>
+<p><u>* Replikerbarhet/reproduserbarhet</u></p>
+<p><u>* Problemets omfang</u></p>
+<ul>
+<li><u>Vil dagens løsning med arkiv av data og event. programkode hos</u></li>
+</ul>
+<p><u>tidsskriftene kunne løse problemet?</u></p>
 <p>* Mulig løsning (teoretisk plan):</p>
 <ul>
 <li>«Compendium», «Dynamic document», «code chunck» og «text chunk»</li>
@@ -235,17 +236,23 @@ pre code {
 <p>* Kan reproduserbarhet ha relevans i sektorer utenfor akademia?</p>
 <p>- Konklusjon</p>
 <p>- Litteraturliste</p>
-<p>Funker dett, <span class="citation"><a href="#ref-schwab1995" role="doc-biblioref">Schwab et al.</a> (<a href="#ref-schwab1995" role="doc-biblioref">1995</a>)</span>.</p>
+<p>jhekfhkewhf <span class="citation"><a href="#ref-allaire2020" role="doc-biblioref">Allaire et al.</a> (<a href="#ref-allaire2020" role="doc-biblioref">2020</a>)</span></p>
+<p>For generelle tanker rundt reproduserbarhet er <span class="citation"><a href="#ref-peng2011" role="doc-biblioref">Peng</a> (<a href="#ref-peng2011" role="doc-biblioref">2011</a>)</span> en god kilde. Videre gir <span class="citation"><a href="#ref-mccullough2008" role="doc-biblioref">McCullough et al.</a> (<a href="#ref-mccullough2008" role="doc-biblioref">2008</a>)</span> en god illustrasjon av problemets omfang innen fagområdet økonomi. <span class="citation"><a href="#ref-mccullough2008" role="doc-biblioref">McCullough et al.</a> (<a href="#ref-mccullough2008" role="doc-biblioref">2008</a>)</span> diskuterer også om tidsskriftenes arkiver av datasett og programkode er en tilfredsstillende løsning av problemet</p>
 </div>
-<div id="litteratur" class="section level2 unnumbered">
-<h2 class="unnumbered">litteratur</h2>
+<div id="litteraturliste" class="section level1 unnumbered">
+<h1 class="unnumbered">Litteraturliste</h1>
 <div id="refs" class="references csl-bib-body hanging-indent" line-spacing="2">
-<div id="ref-schwab1995" class="csl-entry">
-Schwab, M., Karrenbach, M., og Claerbout, J. (1995). <em>Reproducible Electronic Documents</em>. 14.
+<div id="ref-allaire2020" class="csl-entry">
+Allaire, J., Xie, Y., McPherson, J., Luraschi, J., Ushey, K., Atkins, A., Wickham, H., Cheng, J., Chang, W., og Iannone, R. (2020). <em>Rmarkdown: <span>Dynamic</span> Documents for r</em>.
+</div>
+<div id="ref-mccullough2008" class="csl-entry">
+McCullough, B. D., McGeary, K. A., og Harrison, T. D. (2008). Do Economics Journal Archives Promote Replicable Research? <em>Canadian Journal of Economics/Revue canadienne d’économique</em>, <em>41</em>(4), 1406–1420. <a href="https://doi.org/10.1111/j.1540-5982.2008.00509.x">https://doi.org/10.1111/j.1540-5982.2008.00509.x</a>
+</div>
+<div id="ref-peng2011" class="csl-entry">
+Peng, R. D. (2011). Reproducible <span>Research</span> in <span>Computational Science</span>. <em>Science</em>, <em>334</em>(6060), 1226–1227. <a href="https://doi.org/10.1126/science.1213847">https://doi.org/10.1126/science.1213847</a>
 </div>
 </div>
 </div>
->>>>>>> First_branch
 
 
 
