--- a/Assignment_1_besvarelse.html
+++ b/Assignment_1_besvarelse.html
@@ -194,66 +194,16 @@ pre code {
 </div>
 
 
-<div id="disposisjon-dere-trenger-ikke-dekke-alt-listet-her" class="section level2">
-<h2>disposisjon (dere trenger ikke dekke alt listet her)</h2>
-<p><u>- Innleding</u></p>
-<p><u>* Reproduserbarhet, R notebooks</u></p>
-<p><u>- Litteraturgjennomgang</u></p>
-<p><u>* Replikerbarhet/reproduserbarhet</u></p>
-<p><u>* Problemets omfang</u></p>
-<ul>
-<li><u>Vil dagens løsning med arkiv av data og event. programkode hos</u></li>
-</ul>
+<div id="introduksjon" class="section level2">
+<h2>Introduksjon</h2>
+<p>Her kan kanskje vi kanskje skrive noe i lag, kanskje lettest å skrive i slutten?</p>
 </div>
-<div id="tidsskriftene-kunne-løse-problemet" class="section level1">
-<h1><u>tidsskriftene kunne løse problemet?</u></h1>
-<p><strong>- Innleding</strong></p>
-<p><strong>* Reproduserbarhet, R notebooks</strong></p>
-<p><strong>- Litteraturgjennomgang</strong></p>
-<p><strong>* Replikerbarhet/reproduserbarhet</strong></p>
-<p><strong>* Problemets omfang</strong></p>
-<ul>
-<li><strong>Vil dagens løsning med arkiv av data og event. programkode hos</strong></li>
-</ul>
-</div>
-<div id="tidsskriftene-kunne-løse-problemet-1" class="section level1">
-<h1><strong>tidsskriftene kunne løse problemet?</strong></h1>
-<p><u>- Innleding</u></p>
-<p><u>* Reproduserbarhet, R notebooks</u></p>
-<p><u>- Litteraturgjennomgang</u></p>
-<p><u>* Replikerbarhet/reproduserbarhet</u></p>
-<p><u>* Problemets omfang</u></p>
-<ul>
-<li><u>Vil dagens løsning med arkiv av data og event. programkode hos</u></li>
-</ul>
-<p><u>tidsskriftene kunne løse problemet?</u></p>
-<p>* Mulig løsning (teoretisk plan):</p>
-<ul>
-<li>«Compendium», «Dynamic document», «code chunck» og «text chunk»</li>
-</ul>
-<p>* Mulig løsning:</p>
-<ul>
-<li>R Notebooks</li>
-</ul>
-<p>- Analyse</p>
-<p>* Løser R notebooks problemet med reproduserbarhet</p>
-<ul>
-<li>helt eller bare delvis</li>
-</ul>
-<p>* Eksempler på «code chunks» («R Code Block») og «text chunck» i R notebook</p>
-<p>* Har forskerne incentiver til å være «reproduserbare», eller må de tvinges?</p>
-<p>* Er økt reproduserbarhet noe som vil tvinge seg frem eller er dagens</p>
-<p>økte interesse bare et blaff?</p>
-<p>* Kan reproduserbarhet ha relevans i sektorer utenfor akademia?</p>
-<p>- Konklusjon</p>
-<p>- Litteraturliste</p>
-</div>
-<div id="litteraturliste" class="section level1">
-<h1>## litteraturliste</h1>
+<div id="litteraturgjennomgang" class="section level2">
+<h2>Litteraturgjennomgang</h2>
 <p>jhekfhkewhf <span class="citation"><a href="#ref-allaire2020" role="doc-biblioref">Allaire et al.</a> (<a href="#ref-allaire2020" role="doc-biblioref">2020</a>)</span></p>
 <p>For generelle tanker rundt reproduserbarhet er <span class="citation"><a href="#ref-peng2011" role="doc-biblioref">Peng</a> (<a href="#ref-peng2011" role="doc-biblioref">2011</a>)</span> en god kilde. Videre gir <span class="citation"><a href="#ref-mccullough2008" role="doc-biblioref">McCullough et al.</a> (<a href="#ref-mccullough2008" role="doc-biblioref">2008</a>)</span> en god illustrasjon av problemets omfang innen fagområdet økonomi. <span class="citation"><a href="#ref-mccullough2008" role="doc-biblioref">McCullough et al.</a> (<a href="#ref-mccullough2008" role="doc-biblioref">2008</a>)</span> diskuterer også om tidsskriftenes arkiver av datasett og programkode er en tilfredsstillende løsning av problemet</p>
 </div>
-<div id="litteraturliste-1" class="section level1 unnumbered">
+<div id="litteraturliste" class="section level1 unnumbered">
 <h1 class="unnumbered">Litteraturliste</h1>
 <div id="refs" class="references csl-bib-body hanging-indent" line-spacing="2">
 <div id="ref-allaire2020" class="csl-entry">
