--- a/Assignment_1_besvarelse.html
+++ b/Assignment_1_besvarelse.html
@@ -200,6 +200,12 @@ pre code {
 </div>
 <div id="litteraturgjennomgang" class="section level2">
 <h2>Litteraturgjennomgang</h2>
+<ul>
+<li><p>Reproduserbarhet / Replikerbarhet - Peng eller McNutt</p></li>
+<li><p>Problemets omfang - McCullough</p></li>
+<li><p>Mulig løsning - Compenduim, Dynamic document og/eller code-/text chunk?</p></li>
+</ul>
+<p>Lurer på om dette vil gå <span class="citation">(<a href="#ref-xie2020" role="doc-biblioref">Xie, 2020</a>)</span>.</p>
 <p>jhekfhkewhf <span class="citation"><a href="#ref-allaire2020" role="doc-biblioref">Allaire et al.</a> (<a href="#ref-allaire2020" role="doc-biblioref">2020</a>)</span></p>
 <p>For generelle tanker rundt reproduserbarhet er <span class="citation"><a href="#ref-peng2011" role="doc-biblioref">Peng</a> (<a href="#ref-peng2011" role="doc-biblioref">2011</a>)</span> en god kilde. Videre gir <span class="citation"><a href="#ref-mccullough2008" role="doc-biblioref">McCullough et al.</a> (<a href="#ref-mccullough2008" role="doc-biblioref">2008</a>)</span> en god illustrasjon av problemets omfang innen fagområdet økonomi. <span class="citation"><a href="#ref-mccullough2008" role="doc-biblioref">McCullough et al.</a> (<a href="#ref-mccullough2008" role="doc-biblioref">2008</a>)</span> diskuterer også om tidsskriftenes arkiver av datasett og programkode er en tilfredsstillende løsning av problemet</p>
 </div>
@@ -214,6 +220,9 @@ McCullough, B. D., McGeary, K. A., og Harrison, T. D. (2008). Do Economics Journ
 </div>
 <div id="ref-peng2011" class="csl-entry">
 Peng, R. D. (2011). Reproducible <span>Research</span> in <span>Computational Science</span>. <em>Science</em>, <em>334</em>(6060), 1226–1227. <a href="https://doi.org/10.1126/science.1213847">https://doi.org/10.1126/science.1213847</a>
+</div>
+<div id="ref-xie2020" class="csl-entry">
+Xie, Y. (2020). <em>Knitr: <span>A</span> General-Purpose Package for Dynamic Report Generation in r</em> [Manual].
 </div>
 </div>
 </div>
