--- a/Assignment_1_besvarelse.html
+++ b/Assignment_1_besvarelse.html
@@ -201,7 +201,12 @@ pre code {
 <div id="litteraturgjennomgang" class="section level2">
 <h2>Litteraturgjennomgang</h2>
 <ul>
-<li><p>Reproduserbarhet / Replikerbarhet - Peng eller McNutt</p></li>
+<li>Reproduserbarhet / Replikerbarhet - Peng eller McNutt</li>
+</ul>
+<p><strong>Replikerbarhet</strong></p>
+<p>Det e å kunne replikere forskningsresultater av andre forskere er en viktig del av metodikken i vitenskap. Likevel har det å</p>
+<p>Dewald og co forsøkte å replikere et antall datasett og de fant ut at utilsiktede feil i empiriske artikler er snarer vanlig enn uvanlig <span class="citation">(<a href="#ref-dewald1986" role="doc-biblioref">Dewald et al., 1986</a>)</span>.</p>
+<ul>
 <li><p>Problemets omfang - McCullough</p></li>
 <li><p>Mulig løsning - Compenduim, Dynamic document og/eller code-/text chunk?</p></li>
 </ul>
@@ -214,6 +219,9 @@ pre code {
 <div id="refs" class="references csl-bib-body hanging-indent" line-spacing="2">
 <div id="ref-allaire2020" class="csl-entry">
 Allaire, J., Xie, Y., McPherson, J., Luraschi, J., Ushey, K., Atkins, A., Wickham, H., Cheng, J., Chang, W., og Iannone, R. (2020). <em>Rmarkdown: <span>Dynamic</span> Documents for r</em>.
+</div>
+<div id="ref-dewald1986" class="csl-entry">
+Dewald, W. G., Thursby, J. G., og Anderson, R. G. (1986). Replication in <span>Empirical Economics</span>: <span>The Journal</span> of <span>Money</span>, <span>Credit</span> and <span>Banking Project</span>. <em>The American Economic Review</em>, <em>76</em>(4), 587–603.
 </div>
 <div id="ref-mccullough2008" class="csl-entry">
 McCullough, B. D., McGeary, K. A., og Harrison, T. D. (2008). Do Economics Journal Archives Promote Replicable Research? <em>Canadian Journal of Economics/Revue canadienne d’économique</em>, <em>41</em>(4), 1406–1420. <a href="https://doi.org/10.1111/j.1540-5982.2008.00509.x">https://doi.org/10.1111/j.1540-5982.2008.00509.x</a>
