--- a/Assignment_1_besvarelse.html
+++ b/Assignment_1_besvarelse.html
@@ -200,13 +200,13 @@ pre code {
 </div>
 <div id="litteraturgjennomgang" class="section level2">
 <h2>Litteraturgjennomgang</h2>
-<ul>
-<li>Reproduserbarhet / Replikerbarhet - Peng eller McNutt</li>
-</ul>
 <p><strong>Replikerbarhet</strong></p>
 <p>Det å kunne replikere forskningsresultater av andre forskere er en viktig del av metodikken i vitenskap. Tidligere har det vært lite testing av replikerbarhet. Årsaker til dette er at det ikke fremmes å replikere en annen forskers arbeid. Det kan også oppstå kritikk om mangel på kreativitet og fantasi. Det stilles også et kritisk spørsmål til forskerens integritet ettersom man kan tolkes som kritisk til funnene eller at man ikke har tillit til forskeren. Slike argumenter gjør det mindre attraktiv å gjennomføre replikasjonsstudier.</p>
 <p>Dewald og co forsøkte å replikere et antall datasett og de fant ut at utilsiktede feil i empiriske artikler er snarer vanlig enn uvanlig <span class="citation">(<a href="#ref-dewald1986" role="doc-biblioref">Dewald et al., 1986</a>)</span>. Selvom det er ganske vanlig at feil oppstår i empirisk økonomisk forskning, er det ganske frustrerende og vanskelig å replikere og bygge videre på forksningen når det er mange feil i datasettet og det ser heller ikke ut til å påvirke konklusjonen av forfatterne betydelig.</p>
 <p>I nyere tid har teknologien gjort det enklere og billigere å lage og vedlikeholde journale arkiver. Likevel har <span class="citation"><a href="#ref-mccullough2008" role="doc-biblioref">McCullough et al.</a> (<a href="#ref-mccullough2008" role="doc-biblioref">2008</a>)</span> i artikkelen “Do Economics Journal Archives Promote Replicable Research?” vist funn på at det potensielle tilbudet reduseres når redaktører ikke klarer å håndheve og forfattere ikke overholder retningslinjene til journal akriver. Det bemerkes at få forskere benytter seg av muligheten som tilbys til å engasjere seg i replikering fordi økonomisk yrke vurderer replikering som et ideal for å bli kjent, men ikke å bli praktisert <span class="citation">(<a href="#ref-mccullough2008" role="doc-biblioref">McCullough et al., 2008</a>)</span>.</p>
+</div>
+<div id="mulig-løsning" class="section level2">
+<h2>Mulig løsning</h2>
 <ul>
 <li><p>Problemets omfang - McCullough</p></li>
 <li><p>Mulig løsning - Compenduim, Dynamic document og/eller code-/text chunk?</p></li>
