--- a/Assignment_1_besvarelse.html
+++ b/Assignment_1_besvarelse.html
@@ -256,7 +256,7 @@ str(l)</code></pre>
 <pre class="r"><code>sessionInfo()</code></pre>
 <pre><code>## R version 4.1.1 (2021-08-10)
 ## Platform: x86_64-apple-darwin17.0 (64-bit)
-## Running under: macOS Big Sur 10.16
+## Running under: macOS Catalina 10.15.7
 ## 
 ## Matrix products: default
 ## BLAS:   /Library/Frameworks/R.framework/Versions/4.1/Resources/lib/libRblas.0.dylib
@@ -269,11 +269,11 @@ str(l)</code></pre>
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] digest_0.6.27   R6_2.5.1        jsonlite_1.7.2  magrittr_2.0.1 
-##  [5] evaluate_0.14   rlang_0.4.11    stringi_1.7.4   jquerylib_0.1.4
-##  [9] bslib_0.3.0     rmarkdown_2.10  tools_4.1.1     stringr_1.4.0  
-## [13] xfun_0.25       yaml_2.2.1      fastmap_1.1.0   compiler_4.1.1 
-## [17] htmltools_0.5.2 knitr_1.33      sass_0.4.0</code></pre>
+##  [1] digest_0.6.27     R6_2.5.0          jsonlite_1.7.2    magrittr_2.0.1   
+##  [5] evaluate_0.14     rlang_0.4.11      stringi_1.7.3     jquerylib_0.1.4  
+##  [9] bslib_0.2.5.1     rmarkdown_2.10    tools_4.1.1       stringr_1.4.0    
+## [13] xfun_0.25         yaml_2.2.1        compiler_4.1.1    htmltools_0.5.1.1
+## [17] knitr_1.33        sass_0.4.0</code></pre>
 <p>The session info function provides the reader information regarding which operating system, packages and data sets that have been used. This information is crucial in terms of gaining reproducibility.</p>
 </div>
 <div id="reproducibility-across-sectors" class="section level3">
